k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: production
    labels:
        app: production
spec:
    selector:
        matchLabels:
            name: nginx
    replicas: 3
    template:
        spec:
           volumes:
               - name: shared-files
                 emptyDir: {}
           containers:
               - name: php-fpm
                 image: gcr.io/marketreminder-206206/php
                 volumeMounts:
                     - mountPath: shared-files
                       name: /var/www/app
                 lifecycle:
                     postStart:
                         exec:
                             command: ['/bin/sh', 'cp', 'cp -r /var/www/marketReminder /var/www/app']
                 ports:
                     - containerPort: 9000
               - name: nginx
                 image: gcr.io/marketreminder-206206/nginx
                 volumeMounts:
                     - mountPath: shared-files
                       name: /var/www/app
                 ports:
                     - containerPort: 80
