k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: production
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
