k8s/nginx.yaml
apiVersion: v1
kind: Service
metadata:
    name: nginx
spec:
    ports:
        - port: 8080
    selector:
        app: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-deployment
    labels:
        env: prod
spec:
    selector:
        matchLabels:
            app: nginx
    replicas: 3
    template:
        metadata:
            labels:
                app: nginx
        spec:
            containers:
                - name: nginx
                  image: gcr.io/marketreminder-206206/marketreminder_nginx
                  ports:
                      - containerPort: 8080
            restartPolicy: Always
