k8s/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: rabbitmq
spec:
    ports:
        - port: 5672
    selector:
        app: rabbitmq
        stage: production
