k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
    name: redis
spec:
    ports:
        - port: 6379
    selector:
        app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis-deployment
    labels:
        app: redis
spec:
    selector:
        matchLabels:
            app: redis
    replicas: 2
    template:
        metadata:
            labels:
                app: redis
        spec:
            containers:
                - name: master
                  image: redis:alpine
                  ports:
                      - containerPort: 6379
            restartPolicy: Always
