k8s/varnish.yaml
apiVersion: v1
kind: Service
metadata:
    name: varnish
spec:
    selector:
        app: varnish
    ports:
        - port: 8000
    type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: varnish-deployment
    labels:
        app: varnish
spec:
  selector:
      matchLabels:
          app: varnish
  template:
      metadata:
          labels:
              app: varnish
      spec:
          containers:
              - name: varnish
                image: gcr.io/marketreminder-206206/marketreminder_varnish_prod
                ports:
                    - containerPort: 8000
          restartPolicy: Always
