k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: Ingress
spec:
    rules:
        - http:
            paths:
                - path: /
                  backend:
                      serviceName: varnish
                      servicePort: 8000
